<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/munipasto" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/escenarios" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_drive_eta_black_24dp"
            android:title="@string/empres" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/bibliote" />
        <item
            android:id="@+id/nav_lugares"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/sitios" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_place_black_24dp"
                android:title="Mapa Webservice" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_near_me_black_24dp"
                android:title="@string/hospi" />
        </menu>
    </item>

</menu>
