<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/actionModeSplitBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC0A7AA"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/titulo"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_x="51dp"
            android:layout_y="17dp"
            android:text="@string/munipasto"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="4dp"
            android:layout_y="50dp"
            android:text="@string/dane"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/txt_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="0dp"
            android:layout_y="74dp"
            android:text="@string/correo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/txt_entidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="4dp"
            android:layout_y="104dp"
            android:text="@string/direccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="3dp"
            android:layout_y="130dp"
            android:text="@string/nit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/txt_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="3dp"
            android:layout_y="161dp"
            android:text="@string/alcalde"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/txt_establecimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="0dp"
            android:layout_y="188dp"
            android:text="@string/municipio"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="2dp"
            android:layout_y="215dp"
            android:text="Portal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="0dp"
            android:layout_y="250dp"
            android:text="@string/telefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_dane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="72dp"
            android:layout_y="51dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="74dp"
            android:layout_y="77dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="73dp"
            android:layout_y="102dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_nit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="73dp"
            android:layout_y="132dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_alcalde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="77dp"
            android:layout_y="160dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_Municipio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="79dp"
            android:layout_y="187dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_portal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="79dp"
            android:layout_y="217dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/ed_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="85dp"
            android:layout_y="243dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    </AbsoluteLayout>
</android.support.v7.widget.CardView>